--- a/EfCoreShop/EfCoreShop/Views/ShopItem/Index.cshtml
+++ b/EfCoreShop/EfCoreShop/Views/ShopItem/Index.cshtml
@@ -5,6 +5,8 @@
 <ul>
     @foreach(var @shopItem in @Model)
     {
-        <li> @shopItem.Shop.Name </li>
+        <li> @shopItem.Shop.Name @shopItem.Name </li>
+        @Html.ActionLink("Update","Update", "ShopItem", new {id = @shopItem.Id } ,new { @class= "btn btn-danger" })
+        @Html.ActionLink("Delete", "Delete", "ShopItem", new {id = @shopItem.Id } ,new { @class = "btn btn-primary"})
     }
 </ul>
