--- a/EfCoreShop/EfCoreShop/Views/Shared/_Layout.cshtml
+++ b/EfCoreShop/EfCoreShop/Views/Shared/_Layout.cshtml
@@ -27,6 +27,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="ShopItem" asp-action="Index">Items</a>
                         </li>
+                        </li>
+                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ShopItem" asp-action="Add">Add Item</a>
+                        </li>
                     </ul>
                 </div>
             </div>
