--- a/EfCoreShop/EfCoreShop/Views/ShopItem/Add.cshtml
+++ b/EfCoreShop/EfCoreShop/Views/ShopItem/Add.cshtml
@@ -5,6 +5,11 @@
     @Html.LabelFor(a => a.Name)
     @Html.TextBoxFor(a => a.Name)
     @Html.ValidationMessageFor(a => a.Name)
+
+    @Html.LabelFor(a => a.ShopId)
+    @Html.TextBoxFor(a => a.ShopId)
+    @Html.ValidationMessageFor(a => a.ShopId)
+
         
     <input type="submit" value="Submit"/>
 }
