--- a/EfCoreShop/EfCoreShop/Views/ShopItem/Add.cshtml
+++ b/EfCoreShop/EfCoreShop/Views/ShopItem/Add.cshtml
@@ -1,15 +1,16 @@
-﻿@model Shopitem
+﻿@model EfCoreShop.Dtos.CreateShopItem
 
 @using (Html.BeginForm("Add", "ShopItem", FormMethod.Post))
 {
-    @Html.LabelFor(a => a.Name)
-    @Html.TextBoxFor(a => a.Name)
-    @Html.ValidationMessageFor(a => a.Name)
+    @Html.LabelFor(a => a.Shopitem.Name)
+    @Html.TextBoxFor(a => a.Shopitem.Name)
+    @Html.ValidationMessageFor(a => a.Shopitem.Name)
 
-    @Html.LabelFor(a => a.ShopId)
-    @Html.TextBoxFor(a => a.ShopId)
-    @Html.ValidationMessageFor(a => a.ShopId)
+    @Html.LabelFor(a => a.Shopitem.Shop)
+    @Html.DropDownListFor(a => a.Shopitem.Shop, new SelectList(@Model.AllShops, "Id", "Name")) //There is one minor mistake here
+    @Html.ValidationMessageFor(a => a.Shopitem.Shop)
 
-        
+
+
     <input type="submit" value="Submit"/>
 }
