--- a/EfCoreShop/EfCoreShop/Views/ShopItem/Add.cshtml
+++ b/EfCoreShop/EfCoreShop/Views/ShopItem/Add.cshtml
@@ -11,7 +11,8 @@
     @Html.ValidationMessageFor(a => a.Shopitem.Shop)
 
     @Html.LabelFor(a => a.Shopitem.ShopItemTags)
-    @Html.DropDownListFor
+    @Html.DropDownListFor(a => a.Shopitem.ShopItemTags, new SelectList(@Model.SelectedTagIds, "Id", "Name"))
+    @Html.ValidationMessageFor(a => a.Shopitem.ShopItemTags)
 
     //cia turetu buti tagu pvz dropdown su multiple select galimybe.
 
