--- a/HotelApp/HotelApp/Views/Hotel/Add.cshtml
+++ b/HotelApp/HotelApp/Views/Hotel/Add.cshtml
@@ -7,6 +7,9 @@
     </div>
     <div>
         Hotel name @Html.EditorFor(a => a.Name)
+        City @Html.EditorFor(a => a.City)
+        Address @Html.EditorFor(a => a.Address)
+        MAX room number @Html.EditorFor(a => a.MaxRoomNumber)
     </div>
     <input type="submit" value="Submit" />
 }
