--- a/HotelApp/HotelApp/Views/Hotel/Index.cshtml
+++ b/HotelApp/HotelApp/Views/Hotel/Index.cshtml
@@ -4,18 +4,22 @@
 </div>
 
 <table class="table">
-    <thead class="thead-dark">
+    <thead>
         <tr>
-            <th scope="col">#</th>
-            <th scope="col">Hotel</th>
+            <th>#</th>
+            <th>Hotel</th>
+            <th>City</th>
+            <th>Address</th>
         </tr>
     </thead>
     <tbody>
         @foreach (var hotel in @Model)
         {
             <tr>
-                <th scope="row">@hotel.Id</th>
+                <th>@hotel.Id</th>
                 <td>@hotel.Name</td>
+                <td>@hotel.City</td>
+                <td>@hotel.Address</td>
                 <td>
                     @Html.ActionLink("Update", "Update", "Hotel", new { id = @hotel.Id}, new { @class = "btn btn-secondary" })
                     @Html.ActionLink("Delete", "Delete", "Hotel", new { id = @hotel.Id}, new { @class = "btn btn-danger" })
