--- a/HotelApp/HotelApp/Views/Shared/_Layout.cshtml
+++ b/HotelApp/HotelApp/Views/Shared/_Layout.cshtml
@@ -21,6 +21,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Hotel" asp-action="Index">Hotel</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Cleaner" asp-action="Index">Cleaner</a>
+                        </li>
                     </ul>
                 </div>
             </div>
